Fix #2091 Adjust footer styles on smaller screens

--- a/core/templates/dev/head/css/oppia.css
+++ b/core/templates/dev/head/css/oppia.css
@@ -683,7 +683,6 @@ textarea {
 @media (max-width: 768px) {
   .oppia-footer-padding {
     height: 464px;
-    padding-left: -100px;
   }
   
   .oppia-footer-container {
